--- a/style.css
+++ b/style.css
@@ -171,6 +171,21 @@ main {
   text-underline-offset: 7px;
   text-decoration-thickness: 2px;
 }
+/* LEFT COLUMN (photo + menu) */
+.about-left {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
+.profile-pic {
+  width: 180px;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 18px;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+
 
 /* About text */
 .about-text p {
@@ -186,6 +201,13 @@ main {
   .about {
     padding: 5rem 6vw;
   }
+  .about-left {
+  align-items: center;
+}
+
+.profile-pic {
+  width: 150px;
+}
 
   .about-layout {
     grid-template-columns: 1fr;
